modified CSS + fixed styling. Notably, going for a slightly darker theme (black nav bar across page). Font should now be consistently sans-serif (let's keep it this way). Footer of the page now looks more like how I want it, need to add a 'contact us' section to the right of our team summary. Next steps will be to get rid of collapsing nav bar (seriously, look at FB/Twitter/etc., they don't use a collapsing nav bar for a good reason..), and then add a lot of content to index.html - we need to describe (in a simple, concise manner) our project, and then provide links to gallery/videos/faq/contact.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1290,6 +1290,7 @@ h6,
 p {
   margin: 0 0 10px;
 }
+
 .lead {
   margin-bottom: 20px;
   font-size: 16px;
@@ -4639,6 +4640,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .navbar-inverse .navbar-collapse,
 .navbar-inverse .navbar-form {
   border-color: #101010;
+  background-color: #222;
 }
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
